--- a/popup.html
+++ b/popup.html
@@ -125,7 +125,7 @@
     <p style="margin: 4px 0; font-size: 12px; color: #1976d2;">
       🎨 <strong>Picrew Mode</strong>
     </p>
-    <div id="picrew-data" style="display: none;">
+    <div id="picrew-data" style="display: block;">
       <p style="margin: 4px 0; font-size: 11px; color: #555;">
         Maker: <strong id="picrew-maker">-</strong>
       </p>
@@ -140,12 +140,12 @@
           Màu</button>
         <label style="display: flex; align-items: center; font-size: 11px; color: #555; margin: 4px 0; cursor: pointer;">
           <input type="checkbox" id="auto-next-item" style="margin-right: 6px; cursor: pointer;">
-          🔄 Tự động chuyển Item tiếp theo
+          🔄 Tự động chuyển Layer tiếp theo
         </label>
         <p id="crawl-status" style="font-size: 10px; color: #555; margin: 0;">(Chọn 1 Item rồi bấm nút này)</p>
       </div>
     </div>
-    <p id="picrew-placeholder" style="margin: 4px 0; font-size: 11px; color: #777; font-style: italic;">
+    <p id="picrew-placeholder" style="margin: 4px 0; font-size: 11px; color: #777; font-style: italic; display: none;">
       (Vào trang Picrew để kích hoạt)
     </p>
   </div>
