khong tu dong chuyen item

--- a/popup.html
+++ b/popup.html
@@ -136,13 +136,9 @@
       </p>
 
       <div id="picrew-controls" style="margin-top: 8px; border-top: 1px solid #bbdefb; padding-top: 8px;">
-        <button id="auto-crawl-btn" style="background: #1976d2; font-size: 12px; margin-bottom: 4px;">⚡ Tải Tất Cả
-          Màu</button>
-        <label style="display: flex; align-items: center; font-size: 11px; color: #555; margin: 4px 0; cursor: pointer;">
-          <input type="checkbox" id="auto-next-item" style="margin-right: 6px; cursor: pointer;">
-          🔄 Tự động chuyển Layer tiếp theo
-        </label>
+        <button id="auto-crawl-btn" style="background: #1976d2; font-size: 12px; margin-bottom: 4px;">⚡ Tải Toàn Bộ Item</button>
         <p id="crawl-status" style="font-size: 10px; color: #555; margin: 0;">(Chọn 1 Item rồi bấm nút này)</p>
+        <p style="font-size: 10px; color: #777; margin: 4px 0;">✨ Tự động tải tất cả Layer và Màu</p>
       </div>
     </div>
     <p id="picrew-placeholder" style="margin: 4px 0; font-size: 11px; color: #777; font-style: italic; display: none;">
